Update chep-fix.css
Portfolio Symbolic URL Applet Adjustment to have vertical scrollbar

--- a/custom/chep-fix.css
+++ b/custom/chep-fix.css
@@ -47,3 +47,11 @@ div.siebui-collapsible-applet {
     white-space: nowrap;
 } 
 /* END VINCIAC Added to Fix Row Height Issues 12-Sep-2014*******/
+
+/* MEKAA ; For Symbolic URL Iframe Applet Adjustment. Changed position value from 'Absolute' to 'Relative' */
+iframe {
+  position: relative;
+  height: 98%;
+  width: 99%;
+}
+/* End - MEKAA */
